package lab_3.actions;

import lab_3.objects.ThisObject;
// Если нужно описать способ собирания яблока
public interface DescribeCollectAction {
    void describeProcess(ThisObject thisObject);
}
